rainbow text index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </nav>
         <main>
             <section id="About">
-                <p>insert text about later</p>
+                <p align="center" class="rainbow-link">insert text about later</p>
             </section>
         </main>
 
