expanded version of index.html
pls view this file and suggest any possible edits (use chatgpt if you can)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 .rainbow-link {
   animation: rainbow 4s infinite;
-  background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+  background-image: linear-gradient(to right, red, orange, yellow, green, blue, rgb(77, 0, 132), violet);
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -69,12 +69,10 @@
             <a href="#contact">Contact</a>
         </nav>
         <main>
-            <section id="About">
-                <p align="center" class="rainbow-link">insert text about later</p>
+            <section id="about">
+                <p>click here use our own</p>
+                <p><a href="password.html" class="rainbow-link">Password Generator</a></p>
             </section>
         </main>
-
-
-
     </body>
 </html>
