--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </nav>
         <main>
             <section id="about">
-                <p>click here use our own</p>
-                <p><a href="password.html" class="rainbow-link">Password Generator</a></p>
+                <p align="center">click here use our own</p>
+                <p align="center"><a href="password.html" class="rainbow-link">Password Generator</a></p>
             </section>
         </main>
     </body>
