--- a/password.html
+++ b/password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html>
 <head>
   <title>Random Password Generator</title>
@@ -25,6 +25,6 @@
     </div>
   </main>
   <script src="script.js"></script>
-  <p align="center" class="rainbow-link"><a href="index.html">Home</a></p>
+  <p><a href="index.html" align="center" class="rainbow-link">Home</a></p>
 </body>
 </html>
