--- a/password.html
+++ b/password.html
@@ -25,6 +25,6 @@
     </div>
   </main>
   <script src="script.js"></script>
-  <p><a href="index.html" align="center" class="rainbow-link">Home</a></p>
+  <p align="center" class="rainbow-link"><a href="index.html" align="center" class="rainbow-link">Home</a></p>
 </body>
 </html>
