--- a/login.html
+++ b/login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
+  <title>Login Form</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="login.php" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
+  <form id="loginForm">
+    <label for="username">Username:</label>
+    <input type="text" id="username" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" required>
 
-        <input type="submit" value="Login">
-    </form>
-    <p>Don't have an account? <a href="index.html">Create an account</a>.</p>
+    <input type="submit" value="Login">
+  </form>
+
+  <script src="login.js"></script>
 </body>
 </html>
